# towerdefense

./: Cargo.toml  todo.txt
assets/: level02.json  level1.js  level_01.json  temp.pxo
assets/levels/: level-test.json  level02.json  level_03.json  level_1.json  level_4.json
assets/originals/: archer01.aseprite  bg_grass.aseprite  health_bar.aseprite  play_buttons.aseprite
src/: enemy.rs  game_state.rs  grid.rs  level.rs  level_editor.rs  level_textures.rs  lib.rs  main.rs  main_menu.rs  map.rs  overlay.rs  projectile.rs  render.rs  tower.rs  ui.rs  utils.rs
src/core/: config.rs  game_state.rs  map.rs  utils.rs
src/entities/: enemy.rs  pathfinding.rs  projectile.rs  tower.rs
src/level_editor/: components.rs  data.rs  mod.rs  resources.rs  state.rs
src/level_editor/systems/: context_menu.rs  editor_systems.rs  export.rs  input.rs  mod.rs  render.rs  save_dialog.rs  ui.rs
src/levels/: context_menu.rs  level.rs  level_editor.rs  level_loader.rs  level_textures.rs
src/ui/: main_menu.rs  overlay.rs  render.rs  ui_components.rs
