[package]
name = "towerdefense"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["wayland"] }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
