[package]
name = "towerdefense"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking", "wayland"] }
# bevy_ecs_tilemap = { version = "0.15.0", features = ["serde"] }
# leafwing-input-manager = "0.16.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true

